[package]
name = "pagetop-mdbook"
version = "0.0.18"
edition = "2021"

description = "PageTop package to include mdBook content into PageTop applications."
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop-mdbook"
license = "MIT OR Apache-2.0"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
categories = [
    "web-programming", "gui"
]
keywords = [
    "pagetop", "mdbook", "book", "markdown", "component"
]
exclude = [
    "/template"
]

[dependencies]
pagetop = { version = "0.0", path = "../pagetop" }
static-files = "0.2.3"

[build-dependencies]
pagetop-build = { version = "0.0", path = "../pagetop/helpers/pagetop-build" }
